--- a/index.html
+++ b/index.html
@@ -60,6 +60,31 @@
             text-align: center;
             margin: 20px 0;
         }
+		/* User Profile Modal Styles */
+.modal-body img {
+    max-width: 100%;
+    height: auto;
+}
+
+.list-group-item {
+    transition: all 0.3s;
+}
+
+.list-group-item:hover {
+    background-color: #f8f9fa;
+    transform: translateX(5px);
+}
+
+/* Search User Card */
+#usernameSearchInput {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+#usernameSearchButton {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
     </style>
 </head>
 <body>
@@ -160,5 +185,42 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="app.js"></script>
+	
+	<!-- User Profile Modal -->
+<div class="modal fade" id="userProfileModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="userProfileModalTitle">User Profile</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="userProfileModalBody">
+                <div class="text-center" id="userProfileLoading">
+                    <div class="spinner-border text-primary" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
+                <div id="userProfileContent" style="display: none;">
+                    <!-- Profile content will be loaded here -->
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <a href="#" class="btn btn-primary" id="viewProfileOnBlurt">View on Blurt.blog</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Search User Card (sidebar-এ যোগ করুন) -->
+<div class="card mb-4">
+    <div class="card-body">
+        <h5 class="card-title">Search User</h5>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" id="usernameSearchInput" placeholder="Enter Blurt username">
+            <button class="btn btn-primary" type="button" id="usernameSearchButton">Search</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
